BEEBEEP (Secure Lan Messanger)

BeeBEEP 1.0.0
- Only an instance of BeeBEEP can started a time (to launch another one please copy the executable in other folder)
- Send message button can be showed (or hided)

BeeBEEP 0.9.9
- Improved subnet selection when there are many network cards installed
- HotKeys CTRL+A and CTRL+C (CMD+ for mac users) enabled in chat window read-only section
- Show avatar in list of users option
- Status menu icon shows your information when clicked (menu is accessible by the usual way, the drop down arrow)

BeeBEEP 0.9.8
- Language interface added
- More info in profile
- MacOSX version
- eComStation and OS/2 version
- High dpi support for screenshot plugin 

BeeBEEP 0.9.7
- Clear chat messages option 
- Encryption security level 2 
- Removed the limit on the number of files can be shared
- Groups
- Regular-Bold Text Marker plugin
- (Drag and) drop files in chat or in local shares
- Linux version

BeeBEEP 0.9.6
- Auto set Away status when idle option
- Make screenshot plugin
- Conway's Game of Life plugin (just for fun)
- Link saved chat using only nickname option

BeeBEEP 0.9.5
- Load minimized at startup option
- A new window to see application log
- Save chat messages on exit option
- BeeTetris plugin added, just for fun
- Disable notification in tray option
- Improved group chat

BeeBEEP 0.9.4
- Use default password without prompt at startup
- RC file created to let the user choose Native or INI configuration file

BeeBEEP 0.9.3
- Group chat
- Put window on top when a new message arrive option
- Automatic start on windows boot option

BeeBEEP 0.9.2
- Minimize on System Tray is now Close on System Tray
- Always on top window option
- Select file audio option
- Game plugin interface

BeeBEEP 0.8.2
- File Sharing on local area network
- Minimize on System Tray option

BeeBEEP 0.6.2
- Number Encoder Text Marker plugin 
- File BeeHost.ini to reach custom networks

BeeBEEP 0.5.2
- File Transfer improved
- Plugin support enabled