@@ -39,7 +39,7 @@ const char* BEEBEEP_CHECK_VERSION_WEBSITE = "/checkversion.php";
 const char* BEEBEEP_VERSION = "0.9.9";
 const int BEEBEEP_PROTO_VERSION = 62;
 const int BEEBEEP_SETTINGS_VERSION = 3;
-const int BEEBEEP_BUILD = 375;
+const int BEEBEEP_BUILD = 376;
 
 #endif // BEEBEEP_VERSION_H
 
